# TrianglesGL

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: test_ubuntu_build.yml
include/: ANSI_colors.hpp  common.hpp  scene.hpp  user.hpp  vertices.hpp  window.hpp
include/TrianglesGL/: common.hpp  scene.hpp  user.hpp  window.hpp
include/TrianglesGL/gl/: gl.hpp  program.hpp  renderer.hpp  shader.hpp  shadow_map.hpp  vertex_array.hpp
include/TrianglesGL/gl/shaders/: shadow_map.vs  triangles.fs
include/gl/: fragmentshader.frag  program.hpp  renderer.hpp  shader.hpp  shaders.hpp  shadow_map.hpp  triangles.fs  triangles.vs  vertex_array.hpp  vertexshader.vert
include/window/: user.hpp  window.hpp
scenes/: generate.py
scenes/scenes_in/: scene_001.in  scene_002.in  scene_003.in  scene_004.in  scene_005.in  scene_006.in  scene_007.in  scene_008.in  scene_009.in  scene_010.in
src/: CMakeLists.txt  scene.cpp  vertexshader
